# text-adventure-rpg

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
src/text_adventure_rpg/: __init__.py  __main__.py  character.py  combat.py  engine.py  formulas.py  game.py  items.py  narrative.py  npcs.py  persistence.py  scenes.py  validators.py
src/text_adventure_rpg/data/enemies/: bandit.json  darkmage.json  wolf.json
src/text_adventure_rpg/data/items/: sword.json
src/text_adventure_rpg/data/npcs/: goblin.json
src/text_adventure_rpg/data/scenes/: deep_forest.json  forest.json  village_gate.json
tests/: test_character.py  test_combat.py  test_engine.py  test_formulas.py  test_game.py  test_narrative.py  test_persistence.py  test_profile.py  test_smoke.py  test_validators.py
